--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap");
 @import "tailwindcss";
 
 body {
@@ -12,16 +12,31 @@ body {
 
 @theme {
   --color-primary: #060d26;
+  --font-Rubik: "Rubik", sans-serif;
+  --font-Roboto: "Roboto", sans-serif;
+  --font-Outfit: "Outfit", sans-serif;
 }
 
 @layer base {
-
+  button {
+    cursor: pointer;
+  }
 }
 
 @layer components {
-
 }
 
 @layer utilities {
-  
+  .flex-center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .font-thin {
+    font-weight: 300;
+  }
+  .rounds {
+    @apply p-2 rounded-full shadow-md hover:bg-primary hover:text-white transition-colors duration-300;
+  }
 }
