--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -15,6 +15,7 @@ body {
   --font-Rubik: "Rubik", sans-serif;
   --font-Roboto: "Roboto", sans-serif;
   --font-Outfit: "Outfit", sans-serif;
+  --background-image-hero: url("./src/assets/images/hero.jpg");
 }
 
 @layer base {
